--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ xcuserdata/
 *.xcscmblueprint
 *.xccheckout
 
+I think you are looking for this:
+
+*Info.plist
+
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
 DerivedData/
